# mx-manhattan

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20240831212838_releases.sql  20240831213718_fans.sql  20240831214620_press_blurbs.sql  20240831214917_shows.sql  20240831215257_videos.sql  20240831215515_blog.sql  20240831232057_users.sql  20240903190121_about.sql
backend/src/: app.rs  db_types.rs  init.rs  main.rs  routes_old.rs
backend/src/routes/: admin.rs  auth.rs  mod.rs  public.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  static_content.json
frontend/src/pages/: index.js
frontend/src/pages/about/: about_page.css  about_page.js
frontend/src/pages/admin/: admin_page.css  admin_page.js
frontend/src/pages/components/: components.css  dashboard_menu.js  index.js  nav.js  news_card.js  release_card.js
frontend/src/pages/forms/: about.js  blog.js  email.js  forms.css  index.js  login.js  news.js  press.js  release.js  show.js  store.js  video.js
frontend/src/pages/home/: home_page.css  home_page.js
frontend/src/pages/login/: login_page.css  login_page.js
frontend/src/pages/release/: release_page.css  release_page.js
frontend/src/pages/releases/: releases.css  releases.js
frontend/src/pages/splash/: flow_field.js  splash_page.css  splash_page.js
frontend/src/pages/videos/: videos_page.css  videos_page.js
