[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros", "time", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
tower-http = {version = "0.3", features = ["auth"]}
chrono = {version = "0.4.38", features = ["serde"]}
argon2 = "0.5.3"
rand = "0.8.5"
